SIde bar và home page

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL = https://tiktok.fullstack.edu.vn/api/
+REACT_APP_PEXELS_API_KEY = ngDHbsov8aGNIEEA8X1pGizPo7XpJnS5Tj9pwlxATBXoLcsdYE4bwfpi
